# fastvlm

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  batch_processing.rs  custom_config.rs  simple_usage.rs
src/: lib.rs  main.rs
src/fastvlm/: download.rs  fastvlm.rs  fastvlm_image_process.rs  mod.rs
