[package]
name = "fastvlm"
version = "0.1.0"
edition = "2024"

[dependencies]
# AI/ML dependencies
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Async and error handling
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# System directories
dirs = "5.0"

# Logging
tracing = "0.1"
env_logger = "0.11"

# Platform-specific ONNX Runtime execution providers
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda"] }