[package]
name = "fastvlm"
version = "0.1.0"
edition = "2021"
description = "FastVLM - 高性能视觉语言模型库"
license = "MIT"
repository = "https://github.com/shadowcz007/fastvlm"
keywords = ["ai", "vision", "language-model", "onnx", "fastvlm"]
categories = ["artificial-intelligence", "multimedia"]

[lib]
name = "fastvlm"
path = "src/lib.rs"

[[bin]]
name = "fastvlm-cli"
path = "src/main.rs"

[dependencies]
# AI/ML dependencies
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Async and error handling
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# System directories
dirs = "5.0"

# Logging
tracing = "0.1"
env_logger = "0.11"

# Platform-specific ONNX Runtime execution providers
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
ort = { version = "2.0.0-rc.10" }